# bowser

./: .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  code-review.yml  release.yml
docs/: example_config.toml
src/: appconfig.rs  backends.rs  checksum.rs  cli.rs  commands.rs  distinct.rs  error.rs  main.rs  mime.rs  realtime.rs  replay.rs  sentinel.rs  strategy.rs
src/backends/: aws.rs  base.rs  error.rs
src/backends/aws/: backend.rs  error.rs
src/bowser/: cli.py  deforestation.py  extensions.py  result.py
src/bowser/backends/: _common.py  aws.py  base.py  di.py
src/bowser/commands/: __init__.py  di.py  watch.py
src/bowser/commands/watch/: __init__.py  _event.py  _impl.py  _preempt.py  _strategy.py  _type.py
src/bowser/config/: base.py  link.py  loader.py
src/bowser/config/backend/: aws.py  base.py  type_alias.py
src/bowser/extensions/: rx.py  watchdog.py
src/bowser/inotify/: __init__.py  _event.py  _mapper.py  _observable.py
src/commands/: watch.rs
tests/unit/: test_cli.py  test_result.py
tests/unit/backends/: test_aws.py  test_di.py
tests/unit/commands/: test_watch.py
tests/unit/config/: test_loader.py
tests/unit/config/data/: bowser.toml
tests/unit/data/: bowser.toml
tests/unit/extensions/: test_rx.py
tests/unit/extensions/data/: test_observable_background_process.txt
tests/unit/inotify/: test__mapper.py
