[project]
name = "bowser"
version = "1.0.0.dev1"
description = "A side kick application that runs as a sidecar in your Pod and warehouses your data."
authors = [
    {name = "Ryan Smith", email = "ryan.d.smith.106@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
